David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Accessories_and_Wear_Parts__c.field-meta.xml
<CustomField>
    <fullName>Accessories_and_Wear_Parts__c</fullName>
    <label>Accessories and Wear Parts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>