David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Accessories_and_Wear_Parts_Comments__c.field-meta.xml
<CustomField>
    <fullName>Accessories_and_Wear_Parts_Comments__c</fullName>
    <label>Accessories and Wear Parts Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>