David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Accidental_Damage_Comments__c.field-meta.xml
<CustomField>
    <fullName>Accidental_Damage_Comments__c</fullName>
    <label>Accidental Damage Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>