David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Accidental_Damage_Flag__c.field-meta.xml
<CustomField>
    <fullName>Accidental_Damage_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accidental Damage Flag</label>
    <type>Checkbox</type>
</CustomField>