David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/ACR_Check__c.field-meta.xml
<CustomField>
    <fullName>ACR_Check__c</fullName>
    <label>ACR Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>