David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/ACR_Check_Reading__c.field-meta.xml
<CustomField>
    <fullName>ACR_Check_Reading__c</fullName>
    <label>ACR Check Reading</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>