David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Adapter_Detection__c.field-meta.xml
<CustomField>
    <fullName>Adapter_Detection__c</fullName>
    <label>Adapter Detection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>