David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Adapter_Detection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Adapter_Detection_Comments__c</fullName>
    <label>Adapter Detection Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>