David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Additional_Documentation_Reference__c.field-meta.xml
<CustomField>
    <fullName>Additional_Documentation_Reference__c</fullName>
    <label>Additional Documentation Reference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>