David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Additional_Items_Require_Labor__c.field-meta.xml
<CustomField>
    <fullName>Additional_Items_Require_Labor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>04/28/2025 (BW) - Checked true if additional items require labor</description>
    <label>Additional Items Require Labor</label>
    <type>Checkbox</type>
</CustomField>