David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Additional_Items_to_Quote__c.field-meta.xml
<CustomField>
    <fullName>Additional_Items_to_Quote__c</fullName>
    <description>01/31/2025 (BW) - This holds the items that can be additional quoted as identified by the service engineer</description>
    <label>Additional Items to Quote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>