David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>Address_Formula__c</fullName>
    <formula>Street &amp; &quot;, &quot; &amp; City &amp; &quot;, &quot; &amp; State &amp; &quot; &quot; &amp; PostalCode &amp; &quot;, &quot; &amp; Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address (F)</label>
    <type>Text</type>
</CustomField>