David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/AEC_Repeatability_Comments__c.field-meta.xml
<CustomField>
    <fullName>AEC_Repeatability_Comments__c</fullName>
    <label>AEC Repeatability Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>