David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Air_Calibration__c.field-meta.xml
<CustomField>
    <fullName>Air_Calibration__c</fullName>
    <label>Air Calibration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>