David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Alignment_and_Centring_Comments__c.field-meta.xml
<CustomField>
    <fullName>Alignment_and_Centring_Comments__c</fullName>
    <label>Alignment and Centring Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>