David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Alignment_and_Positioning__c.field-meta.xml
<CustomField>
    <fullName>Alignment_and_Positioning__c</fullName>
    <label>Alignment and Positioning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>