David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Application_Logs__c.field-meta.xml
<CustomField>
    <fullName>Application_Logs__c</fullName>
    <label>Application Logs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>