David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <label>Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remote Support</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Support Engineer Visit</fullName>
            </value>
            <value>
                <fullName>Tech Support Call</fullName>
            </value>
            <value>
                <fullName>Quality Assurance</fullName>
            </value>
            <value>
                <fullName>Deinstallation</fullName>
            </value>
            <value>
                <fullName>Site Pre-Check</fullName>
            </value>
            <value>
                <fullName>RAMS</fullName>
            </value>
            <value>
                <fullName>Travel Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>