David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Artifact_Check_Comments__c.field-meta.xml
<CustomField>
    <fullName>Artifact_Check_Comments__c</fullName>
    <label>Artifact Check Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>