David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Backup_of_User_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Backup_of_User_Configuration__c</fullName>
    <label>Backup of User Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>