David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Backup_of_User_Configuration_Comments__c.field-meta.xml
<CustomField>
    <fullName>Backup_of_User_Configuration_Comments__c</fullName>
    <label>Backup of User Configuration Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>