David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Ball_Plungers_Clean_and_Free_Moving__c.field-meta.xml
<CustomField>
    <fullName>Ball_Plungers_Clean_and_Free_Moving__c</fullName>
    <label>Ball Plungers Clean and Free Moving</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>