David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Ball_Plungers_Comments__c.field-meta.xml
<CustomField>
    <fullName>Ball_Plungers_Comments__c</fullName>
    <label>Ball Plungers Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>