David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Battery_Performance_and_Condition__c.field-meta.xml
<CustomField>
    <fullName>Battery_Performance_and_Condition__c</fullName>
    <label>Battery Performance and Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>