David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Battery_Performance_Condition_Comments__c.field-meta.xml
<CustomField>
    <fullName>Battery_Performance_Condition_Comments__c</fullName>
    <label>Battery Performance &amp; Condition Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>