David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Bearings_and_Tracks__c.field-meta.xml
<CustomField>
    <fullName>Bearings_and_Tracks__c</fullName>
    <label>Bearings and Tracks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>