David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Bearings_and_Tracks_Comments__c.field-meta.xml
<CustomField>
    <fullName>Bearings_and_Tracks_Comments__c</fullName>
    <label>Bearings and Tracks Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>