David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/BF_Outputs_Comments__c.field-meta.xml
<CustomField>
    <fullName>BF_Outputs_Comments__c</fullName>
    <label>BF Outputs Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>