David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/BIOS_Battery_Voltage__c.field-meta.xml
<CustomField>
    <fullName>BIOS_Battery_Voltage__c</fullName>
    <label>BIOS Battery (V)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>