David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Brakes_and_Locks__c.field-meta.xml
<CustomField>
    <fullName>Brakes_and_Locks__c</fullName>
    <label>Brakes and Locks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>