David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Brakes_and_Locks_Comments__c.field-meta.xml
<CustomField>
    <fullName>Brakes_and_Locks_Comments__c</fullName>
    <label>Brakes and Locks Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>