David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Bucky_Tray_Assembly_Comments__c.field-meta.xml
<CustomField>
    <fullName>Bucky_Tray_Assembly_Comments__c</fullName>
    <label>Bucky Tray Assembly Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>