David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/C_Arm_Movements__c.field-meta.xml
<CustomField>
    <fullName>C_Arm_Movements__c</fullName>
    <label>C-Arm Movements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>