David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/C_Arm_Movements_Comments__c.field-meta.xml
<CustomField>
    <fullName>C_Arm_Movements_Comments__c</fullName>
    <label>C-Arm Movements Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>