David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Cables_and_Hanger_Supports__c.field-meta.xml
<CustomField>
    <fullName>Cables_and_Hanger_Supports__c</fullName>
    <label>Cables and Hanger Supports</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>