David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Cables_and_Hanger_Supports_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cables_and_Hanger_Supports_Comments__c</fullName>
    <label>Cables and Hanger Supports Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>