David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Castors_and_Brakes__c.field-meta.xml
<CustomField>
    <fullName>Castors_and_Brakes__c</fullName>
    <label>Castors and Brakes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>