David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Castors_and_Brakes_Comments__c.field-meta.xml
<CustomField>
    <fullName>Castors_and_Brakes_Comments__c</fullName>
    <label>Castors and Brakes Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>