David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/CE_Mark__c.field-meta.xml
<CustomField>
    <fullName>CE_Mark__c</fullName>
    <label>CE Mark</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Present</fullName>
            </value>
            <value>
                <fullName>Not Present</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>