David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/CE_Mark_Comments__c.field-meta.xml
<CustomField>
    <fullName>CE_Mark_Comments__c</fullName>
    <label>CE Mark Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>