David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Centring_Comments__c.field-meta.xml
<CustomField>
    <fullName>Centring_Comments__c</fullName>
    <label>Centring Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>