David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Charging_Function__c.field-meta.xml
<CustomField>
    <fullName>Charging_Function__c</fullName>
    <label>Charging Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>