David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Charging_Function_Comments__c.field-meta.xml
<CustomField>
    <fullName>Charging_Function_Comments__c</fullName>
    <label>Charging Function Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>