David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Checklist_Output__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Output__c</fullName>
    <label>Checklist Output</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>