David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Checklist_Output_Formatted_1__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Output_Formatted_1__c</fullName>
    <label>Checklist Output Formatted 1</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>