David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Checklist_Output_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Output_Formatted__c</fullName>
    <label>Checklist Output (Formatted)</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>