David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Checklist_Type__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Type__c</fullName>
    <description>This is set by checklist Flows to inform the &quot;FSL - Formatted Service Report Update&quot; Flow of which route to take to produce the correct HTML output.</description>
    <label>Checklist Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cardio Labs</fullName>
            </value>
            <value>
                <fullName>C-Arm</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>DEXA</fullName>
            </value>
            <value>
                <fullName>Injector</fullName>
            </value>
            <value>
                <fullName>Intraoral</fullName>
            </value>
            <value>
                <fullName>Iradimed Infusion Pump</fullName>
            </value>
            <value>
                <fullName>Iradimed Patient Monitor</fullName>
            </value>
            <value>
                <fullName>Mammography</fullName>
            </value>
            <value>
                <fullName>Mobile X-Ray</fullName>
            </value>
            <value>
                <fullName>MRI</fullName>
            </value>
            <value>
                <fullName>Static Fluoro</fullName>
            </value>
            <value>
                <fullName>Static X-Ray CR</fullName>
            </value>
            <value>
                <fullName>Static X-Ray DDR</fullName>
            </value>
            <value>
                <fullName>Ultrasound</fullName>
            </value>
            <value>
                <fullName>Ultrasound Pre-Contract Inspection</fullName>
            </value>
            <value>
                <fullName>CR Reader</fullName>
            </value>
            <value>
                <fullName>Nuclear Medicine</fullName>
            </value>
            <value>
                <fullName>C-Arm Pre-Contract Inspection</fullName>
            </value>
            <value>
                <fullName>Ultrasound Electrical Safety Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>