David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Closeout_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Closeout_Overdue__c</fullName>
    <formula>AND(
    DATEVALUE(SchedEndTime) &lt; TODAY(),
    NOT(
        OR(
            ISPICKVAL(StatusCategory,&quot;Completed&quot;),
            ISPICKVAL(StatusCategory,&quot;Canceled&quot;),
            ISPICKVAL(StatusCategory,&quot;Cannot Complete&quot;)
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically checked when the Scheduled Start Date has passed and the Service Appointment hasn&apos;t been closed</inlineHelpText>
    <label>Closeout Overdue</label>
    <type>Checkbox</type>
</CustomField>