David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Collimator_Comments__c.field-meta.xml
<CustomField>
    <fullName>Collimator_Comments__c</fullName>
    <label>Collimator Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>