David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Collimator_Function_and_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Collimator_Function_and_Alignment__c</fullName>
    <label>Collimator Function and Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>