David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Comments_on_Additional_Items_to_Quote__c.field-meta.xml
<CustomField>
    <fullName>Comments_on_Additional_Items_to_Quote__c</fullName>
    <description>01/31/2025 (BW) - Comments on the additional items to quote as identified by the service engineer</description>
    <label>Comments on Additional Items to Quote</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>