David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Completed_or_Cannot_Complete_Status__c.field-meta.xml
<CustomField>
    <fullName>Completed_or_Cannot_Complete_Status__c</fullName>
    <description>This is to enable both Completed and Cannot Complete automations to happen off the Paperwork to be Sent Status.</description>
    <label>Completed or Cannot Complete Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cannot Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>