David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Compression_Thickness_Check__c.field-meta.xml
<CustomField>
    <fullName>Compression_Thickness_Check__c</fullName>
    <label>Compression Thickness Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>