David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Compression_Thickness_Check_Comments__c.field-meta.xml
<CustomField>
    <fullName>Compression_Thickness_Check_Comments__c</fullName>
    <label>Compression Thickness Check Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>