David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Console_Clean_Completed__c.field-meta.xml
<CustomField>
    <fullName>Console_Clean_Completed__c</fullName>
    <label>Console Clean Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>