David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Contrast_Mag_2_Comments__c.field-meta.xml
<CustomField>
    <fullName>Contrast_Mag_2_Comments__c</fullName>
    <label>Contrast - Mag 2 Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>