David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Contrast_Normal_Mode__c.field-meta.xml
<CustomField>
    <fullName>Contrast_Normal_Mode__c</fullName>
    <label>Contrast - Normal Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>