David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Contrast_Normal_Mode_Comments__c.field-meta.xml
<CustomField>
    <fullName>Contrast_Normal_Mode_Comments__c</fullName>
    <label>Contrast - Normal Mode Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>